# ChangeLog for sci-geosciences/harmonics-dwf-free
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Jun 2012; Tim Cera <tim@cerazone.net> harmonics-dwf-free-20120302.ebuild:
  sci-geosciences/harmonics-dwf-20120302: Fixed problem where "S" directory
  wasn't found.

*harmonics-dwf-free-20120302 (16 Jun 2012)

  16 Jun 2012; Tim Cera <tim@cerazone.net> +harmonics-dwf-free-20120302.ebuild:
  Version bump.

*harmonics-dwf-free-20110410-r1 (13 Dec 2011)

  13 Dec 2011; Tim Cera <tim@cerazone.net> -harmonics-dwf-free-20110410.ebuild,
  +harmonics-dwf-free-20110410-r1.ebuild:
  Changed location of the tide constituent database (tcd) file to
  /usr/share/harmonics

*harmonics-dwf-free-20110410 (23 Nov 2011)

  23 Nov 2011; Tim Cera <tim@cerazone.net> -harmonics-dwf-free-20100529.ebuild,
  +harmonics-dwf-free-20110410.ebuild:
  Version bump and now creates a /etc/env.d/50xtide_harm file that contains the
  HFILE_PATH environment variable pointing to all installed tidal constituent
  databases.

*harmonics-dwf-free-20100529 (19 Nov 2010)

  19 Nov 2010; Tim Cera <tim@cerazone.net>
  -harmonics-dwf-free-20071228.ebuild, -harmonics-dwf-free-20081228.ebuild,
  +harmonics-dwf-free-20100529.ebuild:
  Version bump.

*harmonics-dwf-free-20081228 (12 Jun 2009)

  12 Jun 2009; Tim Cera <tim@cerazone.net>
  +harmonics-dwf-free-20081228.ebuild:
  sci-geosciences/harmonics-dwf-free: Version bump to 20081228.

  16 May 2008; Tim Cera <tim@cerazone.net>
  +harmonics-dwf-free-20071228.ebuild, +metadata.xml:
  Initial import.
