@@ -1,2 +1,1 @@
-DIST harmonics-dwf-20110410-free.tar.bz2 495106 SHA256 1e0a0a64d498611c2bbd5af8da5fb261346553c7d6cc0379655ebee658e2ca1d
 DIST harmonics-dwf-20120302-free.tar.bz2 503459 SHA256 3d562d71dfb2b7f9a025ca5444607e1433d14ada112a375631ab8a823c870cb7 SHA512 47040110aa34bb4e10969e86a7f6f8e1e7ba6d2b5f319c759b929cac1f51c66353641443856588691e587a16e236bdd1263043d4dd9873b23f6d993b66f2b31f WHIRLPOOL 07112c59a7c3d57823e250c28d3cb2a8d014f23a4a163822ad5fa1d7cc0ee06e46792a05e40a80d5e093da8899b48fc753c362ddf8800c59af566fc0135dd158
