@@ -2,9 +2,11 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI=5
+
 MY_P="${P/-free-/-}"
 
-DESCRIPTION="Tidal harmonics database for libtcd."
+DESCRIPTION="Tidal harmonics database for libtcd"
 HOMEPAGE="http://www.flaterco.com/xtide/"
 SRC_URI="ftp://ftp.flaterco.com/xtide/${MY_P}-free.tar.bz2"
 
@@ -12,9 +14,6 @@ LICENSE="public-domain"
 SLOT="0"
 KEYWORDS="~amd64"
 IUSE=""
-
-DEPEND=""
-RDEPEND="${DEPEND}"
 
 S="${WORKDIR}"/"${MY_P}"
 
